# FVA

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  lock.mdb  opencode.jsonc
.agents/skills/fva/: SKILL.md
.agents/skills/fva-mcp-setup/: SKILL.md
.agents/skills/fva-mcp-setup/references/: manifest-summary.md
.agents/skills/fva/references/: mcp-tools.md
.cargo/: config.toml
.commandcode/taste/: taste.md
.github/workflows/: release.yml
examples/mcp-clients/: claude-code.project.mcp.json  claude-desktop.macos-linux.json  claude-desktop.windows.json  cline.mcp_settings.json  continue.fva.yaml  cursor.global.mcp.json  cursor.project.windows.mcp.json  gemini-cli.settings.json  manifest.json  roo-code.mcp_settings.json  vscode.workspace.mcp.json  vscode.workspace.windows.mcp.json  windsurf.windows.mcp_config.json  zed.context_servers.json  zed.windows.context_servers.json
scripts/: install.ps1  install.sh
skills/fva/: SKILL.md
skills/fva-mcp-setup/: SKILL.md
skills/fva-mcp-setup/references/: manifest-summary.md
skills/fva/references/: mcp-tools.md
src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  upgrade.rs  util.rs
src/bench/: mod.rs  report.rs
src/embedding/: local.rs  mod.rs  voyage.rs
src/fff/: mod.rs
src/graph/: builder.rs  mod.rs
src/indexer/: chunker.rs  mod.rs  parser.rs  store.rs
src/mcp/: mod.rs  server.rs
src/query/: context.rs  hybrid.rs  mod.rs
src/vector/: flat.rs  mod.rs
terminals/: 1.txt  2.txt  3.txt
tests/: indexer_walk.rs
