[package]
name = "fva"
version = "0.0.3-alpha"
edition = "2024"
description = "FFF · Vector · AST — hybrid codebase intelligence engine for AI coding agents"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "code-search", "tree-sitter", "vector-search", "ai-agent"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "fva"
path = "src/main.rs"

[dependencies]
# FFF — fast file search & grep
fff-search = "0.9.7-nightly.957f222"
fff-query-parser = "0.9.7-nightly.957f222"

# MCP server
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# Tree-sitter AST parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"

# Core utilities
blake3 = "1.8"
rayon = "1.10"
memmap2 = "0.9"
notify = "8.0"
notify-debouncer-full = "0.5"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
heed = "0.22"
petgraph = "0.8"
parking_lot = "0.12"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dirs = "6.0"
dunce = "1.0"
globset = "0.4"
ignore = "0.4"
ahash = "0.8"
regex = "1.11"
bincode = "1.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }

# Allocator (optional performance boost)
mimalloc = { version = "0.1", optional = true }

# LanceDB (optional — heavy dependency)
lancedb = { version = "0.30", optional = true }
arrow-array = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
lancedb = ["dep:lancedb", "dep:arrow-array", "dep:arrow-schema"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[dev-dependencies]
tempfile = "3.14"
